--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -249,6 +249,12 @@ jobs:
         if: "matrix.dependencies == 'highest'"
         run: "composer update --no-interaction --no-progress --no-suggest"
 
+      - name: "Show Doctrine mapping information"
+        run: "vendor/bin/doctrine orm:info"
+
+      - name: "Validate Doctrine mapping"
+        run: "vendor/bin/doctrine orm:validate-schema --skip-sync"
+
       - name: "Run auto-review tests with phpunit/phpunit"
         run: "vendor/bin/phpunit --configuration=test/AutoReview/phpunit.xml"
 
