Enhancement: Configure phpstan/phpstan-doctrine

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,6 +3,8 @@ includes:
 
 parameters:
 	checkMissingIterableValueType: false
+	doctrine:
+		objectManagerLoader: config/object-manager.php
 	ergebnis:
 		classesAllowedToBeExtended:
 			- Ergebnis\FactoryBot\Definition\AbstractDefinition
